# fire-evacuation-system

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  사용_가이드.md
assets/: science_hall_lv5.stl
configs/: building.yaml  conv_lstm.yaml  data.yaml  path_planning.yaml  pi_fno.yaml  risk_map.yaml
data/: README.md
docs/: 00_project_overview.md  10_system_architecture.md  20_dataset_and_simulations.md  30_sensor_infrastructure.md  40_tier2_models_continuous.md  50_tier1_gnn_binary.md  60_evaluation_layers.md  70_results_summary.md  80_hypothesis_validation.md  90_next_steps.md  CURRENT_SESSION_STATE.md  H6_riskmap_guide.md  README.md  coordinate_convention.md  decisions.md  evaluation_layers.md  interface_contracts.md  lessons_learned.md  manual_v2.md  risk_indicators.md  session_2026_05_13_summary.md  sparse_retrain_evaluation.md  sparse_sensing_geodesic_evaluation.md  task_request_template.md
experiments/: ablation_data_size.py  ablation_model_size.py  ablation_pi_losses.py  exp_fire_001_compare_models.py  exp_path_001_compare_paths.py  exp_risk_001_validate_map.py
figures/: README.md
scripts/: analyze_locality_vs_iou.py  evaluate_decoder_multi_t0.py  evaluate_sparse_fno.py  evaluate_sparse_model.py  evaluate_sparse_sensing_geodesic.py  extract_stl_floor.py  reproduce_paper_results.sh  run_data_pipeline.sh  run_experiments.sh  setup_env.sh  train_sparse_conv_lstm.py  train_sparse_fno.py  train_tier1_gnn_v4.py  visualize_60s_8row.py  visualize_60s_prediction.py  visualize_gnn_v3_vs_v4.py  visualize_sensor_layout.py  visualize_tier1_predictions.py
(+145 files in other folders)
